--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
         <link rel="stylesheet" href = "mediaqueries.css">
     <head/>
     <body>
-        <nav id="desktop.nav">
+        <nav id="desktop-nav">
             <div class="logo">Roby</div>
             <div>
                 <ul class="nav-links">
@@ -19,6 +19,23 @@
                     <li><a href="#contact">Contact</a></li>
                 </ul>
             </div>
+        </nav>
+        <nav id = "hamburger-nav">
+            <div class="logo">Roby</div>
+            <div class = "hamburger-menu">
+                <div class = "hamburger-icon" onclick="toggleMenu()">
+                    <span></span>
+                    <span></span>
+                    <span></span>
+                </div>
+                <div class = "menu-links">
+                    <li><a href="#about" onclick="toggleMenu()">About</a></li>
+                    <li><a href="#experience" onclick="toggleMenu()">Experience</a></li>
+                    <li><a href="#projects" onclick="toggleMenu()">Projects</a></li>
+                    <li><a href="#contact" onclick="toggleMenu()">Contact</a></li>
+                </div>
+            </div>
+        </nav>
         <script src="script.js"></script>
     </body>
 </html>
