--- a/index.html
+++ b/index.html
@@ -1,13 +1,13 @@
 <!DOCTYPE html>
-<html lang="en>
+<html lang="en">
     <head>
-        <meta  charset="UTF-8" />
+        <meta charset="UTF-8" />
         <meta http-equiv="X-UA-Compatible" content="IE=edge"/>
-        <meta name ="viewport" content="width=device-width, intial-scale=1.0" />
+        <meta name ="viewport" content="width=device-width, intial-scale=1.0"/>
         <title> My Portfolio</title>
-        <link rel="stylesheet" href = "style.css">
-        <link rel="stylesheet" href = "mediaqueries.css">
-    <head/>
+        <link rel="stylesheet" href="style.css">
+        <link rel="stylesheet" href="mediaqueries.css">
+    </head>
     <body>
         <nav id="desktop-nav">
             <div class="logo">Roby</div>
@@ -20,7 +20,7 @@
                 </ul>
             </div>
         </nav>
-        <nav id = "hamburger-nav">
+        <nav id="hamburger-nav">
             <div class="logo">Roby</div>
             <div class = "hamburger-menu">
                 <div class = "hamburger-icon" onclick="toggleMenu()">
@@ -36,6 +36,43 @@
                 </div>
             </div>
         </nav>
+        <section id="profile">
+            <div class="section__pic-container">
+                <img src="./assets/profile-pic.png" alt="profile pic">
+            </div>
+            <div class="section__text">
+                <p class="section__text__p1">Hello, I'm</p>
+                <h1 class="title">Roby</h1>
+                <p class="section__text__p2">Fullstack Developer</p>
+                <div class="btn-container">
+                    <button 
+                        class="btn btn-color-2"
+                        onclick="window.open('./assets/resume-example.pdf')"
+                    >
+                        Download CV
+                    </button>
+                    <button 
+                        class="btn btn-color-1"
+                        onclick="location.href='./#contact'">
+                        Contact Info
+                    </button>
+                </div>
+                <div id="socials-container">
+                    <img 
+                        src="./assets/linkedin.png" 
+                        alt="My Linkedin profile"
+                        class="icon" 
+                        onclick="location.href='https://www.linkedin.com/in/roberto-robles-1674961b7/'"
+                    />
+                    <img 
+                        src="./assets/github.png" 
+                        alt="My github profile"
+                        class="icon"
+                        onclick="location.href='https://github.com/rroby25'"
+                    />
+                </div>
+            </div>
+        </section>
         <script src="script.js"></script>
     </body>
 </html>
