About me section

--- a/index.html
+++ b/index.html
@@ -38,12 +38,12 @@
         </nav>
         <section id="profile">
             <div class="section__pic-container">
-                <img src="./assets/profile-pic.png" alt="profile pic">
+                <img src="./assets/cropped_image.png" alt="profile pic">
             </div>
             <div class="section__text">
                 <p class="section__text__p1">Hello, I'm</p>
-                <h1 class="title">Roby</h1>
-                <p class="section__text__p2">Fullstack Developer</p>
+                <h1 class="title">Roberto</h1>
+                <p class="section__text__p2">Mechanical Enginner</p>
                 <div class="btn-container">
                     <button 
                         class="btn btn-color-2"
@@ -72,6 +72,52 @@
                     />
                 </div>
             </div>
+        </section>
+        <section id="about">
+            <p class="section__text__p1">Get To Know More</p>
+            <h1 class="title">About me</h1>
+            <div class="section-container">
+                <div class="section__pic-container">
+                    <img
+                        src="./assets/about-pic.png"
+                        alt="Profile Picture"
+                        class="about-pic"
+                    />
+                </div>
+                <div class="about-details-container">
+                    <div class="about-containers">
+                        <div class="details-container">
+                            <img 
+                                src="./assets/experience.png"
+                                alt="Experience Icon" 
+                                class="icon"
+                            />
+                            <h3>Experience</h3>
+                            <p>2+ years <br />Frontend Development</p>
+                        </div>
+                        <div class="details-container">
+                            <img 
+                                src="./assets/education.png"
+                                alt="Education Icon" 
+                                class="icon"
+                            />
+                            <h3>Education</h3>
+                            <p>B.Sc. Bachelors Degree<br/> M.Sc. Masters Degree</p>
+                        </div>
+                    </div>
+                    <div class="text-container">
+                        <p>
+                            Lorem ipsum dolor sit amet consectetur adipisicing elit. Praesentium, ipsa commodi dignissimos reiciendis iste ipsum culpa, molestias illo, obcaecati tempore officia. Praesentium dignissimos fugiat est velit nemo numquam, magni sunt doloremque laboriosam mollitia doloribus voluptates molestiae. Quasi, cum ut! Deserunt quos hic earum odio repellendus sunt molestiae minus cum iste.
+                        </p>
+                    </div>
+                </div>
+            </div>
+            <img 
+                src="./assets/arrow.png"
+                alt="Arrow Icon"
+                class="icon arrow"
+                onclick="location.href='./experience'"
+            />
         </section>
         <script src="script.js"></script>
     </body>
