--- a/index.html
+++ b/index.html
@@ -22,13 +22,13 @@
         </nav>
         <nav id="hamburger-nav">
             <div class="logo">Roby</div>
-            <div class = "hamburger-menu">
-                <div class = "hamburger-icon" onclick="toggleMenu()">
+            <div class="hamburger-menu">
+                <div class="hamburger-icon" onclick="toggleMenu()">
                     <span></span>
                     <span></span>
                     <span></span>
                 </div>
-                <div class = "menu-links">
+                <div class="menu-links">
                     <li><a href="#about" onclick="toggleMenu()">About</a></li>
                     <li><a href="#experience" onclick="toggleMenu()">Experience</a></li>
                     <li><a href="#projects" onclick="toggleMenu()">Projects</a></li>
@@ -321,6 +321,43 @@
                 onclick="location.href='./#projects'"
             />
         </section>
+        <section id="contact">
+            <p class="section__text__p1">Get in Touch</p>
+            <h1 class="title">Contact Me</h1>
+            <div class="contact-info-upper-container">
+                <div class="contact-info-container">
+                    <img 
+                        src="./assets/email.png"
+                        alt="Email Icon"
+                        class="icon contact-icon email-icon"
+                    />
+                    <p><a href="mailto:examplemail@gmail.com">Example@gmail.com</a>
+                    </p>
+                </div>
+                <div class="contact-info-container">
+                    <img 
+                        src="./assets/linkedin.png"
+                        alt="Linkedin Icon"
+                        class="icon contact-icon"
+                    />
+                    <p><a href="https://www.linkedin.com/in/roberto-robles-1674961b7/">Linkedin</a>
+                    </p>
+                </div>
+            </div>
+        </section>
+        <footer>
+            <nav>
+                <div class="nav-links-container">
+                    <ul class="nav-links">
+                        <li><a href="#about">About</a></li>
+                        <li><a href="#experience">Experience</a></li>
+                        <li><a href="#projects">Projects</a></li>
+                        <li><a href="#contact">Contact</a></li>
+                    </ul>
+                </div>
+            </nav>
+            <p>Copyright &#169; 2023 Roberto Robles. All Rights Reserved</p>
+        </footer>
         <script src="script.js"></script>
     </body>
 </html>
