--- a/index.html
+++ b/index.html
@@ -318,7 +318,7 @@
                 src="./assets/arrow.png"
                 alt="Arrow Icon"
                 class="icon arrow"
-                onclick="location.href='./#projects'"
+                onclick="location.href='./#contact'"
             />
         </section>
         <section id="contact">
